--- a/page1.html
+++ b/page1.html
@@ -76,7 +76,7 @@
                     <a class="font-weight-bold"> GEL MANICURE </a><br>
                     file + buff, cuticle tidy, mini massage, gel, moisturise + oil<br>
                     <b>45 MIN | £38</b><br><br>
-                    <br>
+
                     <a class="font-weight-bold">FREE FROM MANICURE</a> <br>
                     file + buff, cuticle tidy, mini massage, free from polish, organic moisturise + oil<br>
                     <b>30 MIN | £38</b><br><br>
@@ -89,7 +89,7 @@
                 <button type="button" class="btn btn-dark btn-block">BOOK APPOINTMENT</button>
             </div>
             <div class="col">
-                <img src="images/hand.jpg" width="100%" height="710px">
+                <img src="images/hand.jpg" width="100%" height="690px">
             </div>
         </div>
         <br><br><br>
@@ -100,23 +100,23 @@
             </div>
             <div class="col">
                 <p style="font-size: 16px;">
-                    <a class="font-weight-bold">NAKED MANICURE </a><br>
+                    <a class="font-weight-bold">DELUXE SPA PEDICURE </a><br>
                     file + buff, cuticle tidy, mini massage, moisturise + oil (no polish)<br>
                     <b>20 MIN | £22</b><br><br>
 
-                    <a class="font-weight-bold">SIGNATURE MANICURE </a> <br>
+                    <a class="font-weight-bold">JELLY PEDICURE </a> <br>
                     file + buff, cuticle tidy, mini massage, polish, moisturise + oil<br>
                     <b>30 MIN | £27</b><br><br>
 
-                    <a class="font-weight-bold"> GEL MANICURE </a><br>
+                    <a class="font-weight-bold">CLASSIC PEDICURE WITH JELL POLISH </a><br>
                     file + buff, cuticle tidy, mini massage, gel, moisturise + oil<br>
                     <b>45 MIN | £38</b><br><br>
 
-                    <a class="font-weight-bold">FREE FROM MANICURE</a> <br>
+                    <a class="font-weight-bold">GENTLE MEN'S PEDICURE</a> <br>
                     file + buff, cuticle tidy, mini massage, free from polish, organic moisturise + oil<br>
                     <b>30 MIN | £38</b><br><br>
 
-                    <a class="font-weight-bold">FREE FROM GEL MANICURE </a><br>
+                    <a class="font-weight-bold">CLASSIC PEDICURE </a><br>
                     file + buff, cuticle tidy, mini massage, free from gel, organic moisturise + oil<br>
                     <b>45 MIN | £45</b><br><br>
                 </p>
@@ -129,16 +129,16 @@
         <br>
         <div class="row">
             <div class="col">
-                CLEAN N SIMPLE (NAIL ART) <br>
-                Dots 10 MIN | £10 <br>
-                Lines, French, Moons 15 MIN | £15 <br> <br>
+                <b>CLEAN N SIMPLE (NAIL ART)</b> <br>
+                Dots <b>10 MIN | £10</b><br>
+                Lines, French, Moons <b>15 MIN | £15</b> <br> <br>
 
-                ALL OUT (NAIL ART)<br>
-                Chrome, foil, tape (gel only) 15 MIN | £20<br>
-                Tortoiseshell, marble, animal print 20 MIN | £25<br>
-                Tie dye, Flames 25 MIN | £30<br>
-                Custom design 30MIN | £35<br>
-                Custom design - signature nails (two nails max) 15 MIN | £17
+                <b>ALL OUT (NAIL ART)</b><br>
+                Chrome, foil, tape (gel only) <b>15 MIN | £20</b><br>
+                Tortoiseshell, marble, animal print <b>20 MIN | £25</b><br>
+                Tie dye, Flames <b>25 MIN | £30</b><br>
+                Custom design <b>30MIN | £35</b><br>
+                Custom design - signature nails (two nails max) <b>15 MIN | £17</b>
                 <br> <br> <br>
                 <button type="button" class="btn btn-dark btn-block">BOOK APPOINTMENT</button>
             </div>
@@ -233,14 +233,14 @@
                     <br>
                     <br>
                     <ul class="ftco-footer-social p-0">
-                        <li class="ftco-animate"><a href="https://twitter.com/" data-toggle="tooltip" data-placement="top"
-                                title="Twitter"><span class="ion-logo-twitter"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.facebook.com/" data-toggle="tooltip" data-placement="top"
-                                title="Facebook"><span class="ion-logo-facebook"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.instagram.com/" data-toggle="tooltip" data-placement="top"
-                                title="Instagram"><span class="ion-logo-instagram"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.youtube.com/" data-toggle="tooltip" data-placement="top"
-                                title="Instagram"><span class="ion-logo-youtube"></span></a></li>
+                        <li class="ftco-animate"><a href="https://twitter.com/" data-toggle="tooltip"
+                                data-placement="top" title="Twitter"><span class="ion-logo-twitter"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.facebook.com/" data-toggle="tooltip"
+                                data-placement="top" title="Facebook"><span class="ion-logo-facebook"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.instagram.com/" data-toggle="tooltip"
+                                data-placement="top" title="Instagram"><span class="ion-logo-instagram"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.youtube.com/" data-toggle="tooltip"
+                                data-placement="top" title="Instagram"><span class="ion-logo-youtube"></span></a></li>
                     </ul>
                 </div>
             </div>
