--- a/page2.html
+++ b/page2.html
@@ -50,7 +50,7 @@
         </ul>
     </nav>
     <br>
-   
+
 
     <div class="container">
         <img src="images/logo2.png" style="margin-left: 35%;" height="300px" width="300px">
@@ -81,27 +81,22 @@
         </div>
         <br>
         <br>
-        <h1 style="font-size: 24px;" class="font-weight-bold">BEAUTY SALON IS THE PERFECT PLACE TO GET AN EXCEPTIONAL HAIRSTYLE FROM
+        <h1 style="font-size: 24px;" class="font-weight-bold">BEAUTY SALON IS THE PERFECT PLACE TO GET AN EXCEPTIONAL
+            HAIRSTYLE FROM
             TOP-NOTCH, INTERNATIONALLY TRAINED STYLISTS AND COLORISTS.</h1>
         <br>
         <a>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
-
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
-
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</a>
+            Imagine how you’ll feel when you’re in your sumptuous suite, sipping Baron de Beaupre Champagne and
+            reclining on your comfortable bed. You’ll be even more relaxed after you’ve sampled one of the luxury spa
+            treatments on offer, and enjoyed a delicious meal for two in Maxine’s restaurant, lit by candles and
+            followed by a hearty English breakfast and another day of blissful pampering in ultimate style. Soak in the
+            Jacuzzi, wind down in the steam room and make the most of your me-time. <br><br>
+            From the welcome drink on arrival to the Moroccan style teas while you relax, this is the perfect pre-summer
+            pick me up. Steam yourself in the LED steam room, to prepare yourself for an indulgent body massage and a
+            relaxing Thai foot massage. Then enjoy an express facial and leave the spa day experience sparkling like a
+            new you, after you’ve made the most of free sweets and fruity treats in the relaxation room…a totally
+            indulgent summer spa package.
+        </a>
     </div>
     <br>
     <br>
@@ -128,14 +123,14 @@
                     <br>
                     <br>
                     <ul class="ftco-footer-social p-0">
-                        <li class="ftco-animate"><a href="https://twitter.com/" data-toggle="tooltip" data-placement="top"
-                                title="Twitter"><span class="ion-logo-twitter"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.facebook.com/" data-toggle="tooltip" data-placement="top"
-                                title="Facebook"><span class="ion-logo-facebook"></span></a></li>
-                        <li class="ftco-animate"><a href="https://www.instagram.com/" data-toggle="tooltip" data-placement="top"
-                                title="Instagram"><span class="ion-logo-instagram"></span></a></li>
-                                <li class="ftco-animate"><a href="https://www.youtube.com/" data-toggle="tooltip" data-placement="top"
-                                    title="Instagram"><span class="ion-logo-youtube"></span></a></li>
+                        <li class="ftco-animate"><a href="https://twitter.com/" data-toggle="tooltip"
+                                data-placement="top" title="Twitter"><span class="ion-logo-twitter"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.facebook.com/" data-toggle="tooltip"
+                                data-placement="top" title="Facebook"><span class="ion-logo-facebook"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.instagram.com/" data-toggle="tooltip"
+                                data-placement="top" title="Instagram"><span class="ion-logo-instagram"></span></a></li>
+                        <li class="ftco-animate"><a href="https://www.youtube.com/" data-toggle="tooltip"
+                                data-placement="top" title="Instagram"><span class="ion-logo-youtube"></span></a></li>
                     </ul>
                 </div>
             </div>
